# bzl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bump-version.yml  release.yml
bzl/: __init__.py  __main__.py  app.py  bazel.py  ssh.py
bzl/screens/: base_screen.py  genrule_screen.py  kind_select_screen.py  module_screen.py
bzl/widgets/: fuzzy_list.py
