[project]
name = "bzl"
version = "2.0.0"
description = "Terminal UI for browsing and executing Bazel genrule targets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.50.0",
    "rapidfuzz>=3.0.0",
    "pyfiglet",
]

[project.scripts]
bzl = "bzl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
